Added in description and keywords meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta name="description" content="An undergraduate at the University of Waterloo with a penchant for developing (and designing) user-facing software.">
+    <meta name="keywords" content="Ji Ho Oh, software, Android, web, developer"
 
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
