--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <meta name="description" content="An undergraduate at the University of Waterloo with a penchant for developing (and designing) user-facing software.">
-    <meta name="keywords" content="Ji Ho Oh, software, Android, web, developer"
+    <meta name="keywords" content="Ji Ho Oh, software, Android, web, developer" >
 
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
